package controller;

public class AplMain {

	public static void main(String[] args) {
		
		Controller control; //espacio de memoria
		control = new Controller(); //crea la clase

	}

}
